<resources>
    <string name="app_name">tp2</string>
    <string name="repository_name">Repository Name</string>
    <string name="repository_content_description">Repository Content Description</string>
    <string name="created_at">Created at: 02/02/2019 10:12</string>
    <string name="user_name">Vincent FERRIES</string>
    <string name="view_on_github">View on Github</string>
    <string name="user_avatar">User Avatar</string>
</resources>
